--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,5 @@
 (tests
- (names test_parser test_scopes)
+ (names test_parser test_env)
  (libraries alcotest iec_checker.core iec_checker.parser iec_checker.lib)
  (deps
   (source_tree data)))
