--- a/src/bin/dune
+++ b/src/bin/dune
@@ -1,6 +1,6 @@
 (executable
  (name iec_checker)
- (libraries core re iec_checker.lib iec_checker.parser iec_checker.core)
+ (libraries core re iec_checker.lib iec_checker.parser iec_checker.core iec_checker.analysis)
  (preprocess (pps ppx_variants_conv)))
 
 ; Make warnings non-fatal
