--- a/src/core/dune
+++ b/src/core/dune
@@ -2,5 +2,7 @@
  (name IECCheckerCore)
  (public_name iec_checker.core)
  (synopsis "The core of iec-checker")
- (libraries core)
- (preprocess (pps ppxlib ppx_fields_conv ppx_deriving.std ppx_deriving.show)))
+ (libraries core yojson)
+ (preprocess
+  (pps ppxlib ppx_fields_conv ppx_deriving.std ppx_deriving.show
+    ppx_deriving_yojson)))
