--- a/src/bin/dune
+++ b/src/bin/dune
@@ -1,7 +1,12 @@
 (executable
- (name iec_checker)
- (libraries core re iec_checker.lib iec_checker.parser iec_checker.core iec_checker.analysis)
- (preprocess (pps ppx_variants_conv ppx_jane)))
+ (public_name iec_checker)
+ (libraries core re iec_checker.lib iec_checker.parser iec_checker.core
+   iec_checker.analysis)
+ (preprocess
+  (pps ppx_variants_conv ppx_jane)))
 
 ; Make warnings non-fatal
-(env (dev (flags (:standard -warn-error -A))))
+(env
+ (dev
+  (flags
+   (:standard -warn-error -A))))
