--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Pytest tests
+name: Unit tests
 
 on:
   push:
@@ -9,10 +9,11 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [ '3.7' ]
+        ocaml-version: [ '4.08.1' ]
 
     steps:
     - uses: actions/checkout@v2
@@ -20,11 +21,22 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Setup OCaml ${{ matrix.ocaml-version }}
+      uses: avsm/setup-ocaml@master
+      with:
+        ocaml-version: ${{ matrix.ocaml-version }}
+    - name: Build OCaml core
+      run: |
+        opam install -y dune core menhir menhirLib ppx_deriving ppx_deriving_yojson ppx_fields_conv ppx_jane ppx_variants_conv ppxlib re yojson
+        eval $(opam env)
+        dune build @install
+        mkdir -p output
+        dune install --prefix output
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest # flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     # - name: Lint with flake8
     #   run: |
     #     # stop the build if there are Python syntax errors or undefined names
