Rewrote CFG generation routine
Attempt to generate a correct control flow graph with complex nested
statements.

--- a/src/bin/dune
+++ b/src/bin/dune
@@ -2,6 +2,8 @@
  (public_name iec_checker)
  (libraries core re iec_checker.lib iec_checker.parser iec_checker.core
    iec_checker.analysis)
+ ; Enable for debugging:
+ ; (modes byte)
  (preprocess
   (pps ppx_variants_conv ppx_jane)))
 
