ci: Add xmlm as dependency

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -27,7 +27,7 @@ jobs:
         ocaml-version: ${{ matrix.ocaml-version }}
     - name: Build OCaml core
       run: |
-        opam install -y dune core menhir menhirLib ppx_deriving ppx_deriving_yojson ppx_fields_conv ppx_jane ppx_variants_conv ppxlib re yojson
+        opam install -y dune xmlm core menhir menhirLib ppx_deriving ppx_deriving_yojson ppx_fields_conv ppx_jane ppx_variants_conv ppxlib re yojson
         eval $(opam env)
         dune build @install
         mkdir -p output
