Updated dependencies, added the ability to build for Windows
Replace platform-dependent Core library with Core_kernel which can be
built on Windows. Clap library is currently used instead of Core.Command
to handle CLI arguments.

--- a/src/analysis/dune
+++ b/src/analysis/dune
@@ -2,4 +2,4 @@
  (name IECCheckerAnalysis)
  (public_name iec_checker.analysis)
  (synopsis "Common semantic checks")
- (libraries core iec_checker.core))
+ (libraries core_kernel iec_checker.core))
