--- a/src/parser/dune
+++ b/src/parser/dune
@@ -1,8 +1,8 @@
 (library
  (name IECCheckerParser)
  (public_name iec_checker.parser)
- (synopsis "Provides an interface for parsing IEC61131-3 code")
- (libraries core menhirLib iec_checker.core))
+ (synopsis "Provides an interface for processing the IEC61131-3 source code")
+ (libraries core_kernel menhirLib iec_checker.core))
 
 (menhir
  (modules parser)
