--- a/src/parser/dune
+++ b/src/parser/dune
@@ -7,6 +7,7 @@
 (menhir
  (modules parser)
  (flags ("--dump" "--explain")))
+ ; (flags ("--dump" "--explain" "--trace")))
 
 (ocamllex
  (modules lexer))
