--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: [ '3.8' ]
-        ocaml-version: [ '4.10.0' ]
+        ocaml-compiler: [ '4.12.x' ]
 
     steps:
     - uses: actions/checkout@v2
@@ -17,10 +17,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Setup OCaml ${{ matrix.ocaml-version }}
-      uses: avsm/setup-ocaml@master
+    - name: Setup OCaml ${{ matrix.ocaml-compiler }}
+      uses: avsm/setup-ocaml@v2
       with:
-        ocaml-version: ${{ matrix.ocaml-version }}
+        ocaml-compiler: ${{ matrix.ocaml-compiler }}
     - name: Build OCaml core
       run: |
         opam install --deps-only .
