--- a/iec_checker.opam
+++ b/iec_checker.opam
@@ -19,7 +19,7 @@ depends: [
   "ppx_fields_conv" {build}
   "ppx_jane" {build}
   "ppx_variants_conv" {build}
-  "ppxllib" {build}
+  "ppxlib" {build}
   "re" {build}
   "xmlm" {build}
   "yojson" {build}
