--- a/iec_checker.opam
+++ b/iec_checker.opam
@@ -12,8 +12,8 @@ depends: [
   "ocaml" {>= "4.08"}
   "core_kernel" {build}
   "clap" {build}
-  "menhir" {build}
-  "menhirLib" {build}
+  "menhir" {build & = "20210929"}
+  "menhirLib" {build & = "20210929"}
   "ppx_deriving" {build}
   "ppx_deriving_yojson" {build}
   "ppx_fields_conv" {build}
