Update project to use Core instead Core_kernel
Core_kernel is deprecated for now, so we must use Core.

--- a/iec_checker.opam
+++ b/iec_checker.opam
@@ -10,7 +10,7 @@ bug-reports: "https://github.com/jubnzv/iec-checker/issues"
 depends: [
   "dune" {>= "2.0"}
   "ocaml" {>= "4.08"}
-  "core_kernel" {build}
+  "core" {build}
   "clap" {build}
   "menhir" {build & = "20210929"}
   "menhirLib" {build & = "20210929"}
