--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -25,14 +25,11 @@ jobs:
       run: |
         opam install --deps-only .
         eval $(opam env)
-        dune build @install
-        mkdir -p output
-        dune install --prefix output
+        make build
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Test with pytest
       run: |
-        cd test
-        pytest
+        make test
